# mapping-pipeline

./: .bumpversion.cfg  .gitmodules  NOTICE  README.md  docker-compose.yml  next_steps.md  setup.cfg
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  05_linting.md
capacity-mapping/: CONTRIBUTING.md  README.dev.md  project_setup.md  sonar-project.properties
capacity-mapping/.github/next_steps/: 04_zenodo_integration.md
capacity-mapping/.github/workflows/: build.yml
capacity-mapping/capacity_mapping/: __init__.py
capacity-mapping/docs/: index.rst
capacity_mapping/: my_module.py
docs/: Makefile  conf.py  make.bat
tests/: test_my_module.py
