# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Djura Sarina Smits
author_email = d.smits@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Combines all the steps of uploading ehr to capacity 
keywords =
    ehr
    fhir
long_description = file: README.md
long_description_content_type = text/markdown
name = capacity_mapping
project_urls =
    Bug Tracker = https://github.com/FAIR-data-for-CAPACITY /capacity-mapping/issues
url = https://github.com/FAIR-data-for-CAPACITY /capacity-mapping
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
publishing =
    twine
    wheel

[options.packages.find]
include = capacity_mapping, capacity_mapping.*

[coverage:run]
branch = True
source = capacity_mapping

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = capacity_mapping
src_paths = capacity_mapping,tests
line_length = 120

[tool:pytest]
testpaths = tests
# Note that visual debugger in some editors like pycharm gets confused by coverage calculation.
# As a workaround, configure the test configuration in pycharm et al with a --no-cov argument
addopts = --cov --cov-report xml --cov-report term --cov-report html
